fix: overflow ellipsis didnt work

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -92,4 +92,8 @@
            [box-shadow:#65778633_0px_0px_15px,_#65778626_0px_0px_3px_1px] 
            dark:[box-shadow:#ffffff33_0px_0px_15px,_#ffffff26_0px_0px_3px_1px];
   }
+
+  .multiline {
+  	overflow-wrap: anywhere;
+  }
 }
